﻿2007-02-11  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_1-9.tmx.gz, data/maps/new_1-14.tmx.gz,
	data/maps/new_1-16.tmx.gz: Restored the cloud shadow overlays in the
	woodland that got lost somehow during the halloween and christmas chaos.

2007-02-11  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/sprites/chest_cotton_female.png: Removed this strange
	duplicate.
	* data/graphics/sprites/Makefile.am,
	data/graphics/sprites/CMakeLists.txt: Some updates.

2007-02-10  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/viewport.cpp: Fixed the bug in the scrolling limitation that made
	it possible to scroll outside of the map in the south and east.

2007-02-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/menuwindow.cpp: Fixed a small glitch when dragging the menu
	window.

2007-02-03  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/player-female-base.png: Made the standing and
	walking of the female characters more feminine.
	* data/equipment.xml, data/graphics/sprites/leg-cotton-male.png,
	data/graphics/sprites/leg-cotton-male.xml,
	data/graphics/sprites/leg-cotton-female.png,
	data/graphics/sprites/leg-cotton-female.xml,
	data/graphics/sprites/leg-jeans-male.png,
	data/graphics/sprites/leg-jeans-male.xml,
	data/graphics/sprites/leg-jeans-female.png,
	data/graphics/sprites/leg-jeans-female.xml: Added different sprites
	for male and female pants.

2007-02-02  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/engine.h, src/engine.cpp, src/being.h, src/being.cpp: Moved
	responsibility of loading emoticons to the Being class.

2007-02-01  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/updatewindow.cpp: File handle should be closed before
	attempting to remove/rename files.
	* src/gui/button.h: Fixed buttons loosing focus.

2007-02-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp, src/gui/updatewindow.h: A bit of cleanup
	and defined a helper function for calculating the alder32 checksum of